--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alessandro Saviolo"
-  avatar           : "guanrui_profile.png"
+  avatar           : "profile_picture.jpg"
   bio              : "Ph.D. Candidate"
   location         : "Brooklyn, New York"
   employer         : "ARPL, NYU"
