--- a/_config.yml
+++ b/_config.yml
@@ -100,9 +100,9 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/alessandro-saviolo/"
+  linkedin         : "alessandro-saviolo"
   orcid            :
   pinterest        :
   soundcloud       :
