--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile_picture.png"
   bio              : "Ph.D. Candidate"
   location         : "Brooklyn, New York"
-  employer         : "ARPL, NYU"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=HaOQ8AoAAAAJ&hl=en&oi=ao"
   email            : "as16054@nyu.edu"
