--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
 - title: "Publications"
   url: /publications/
 
-#  - title: "Talks"
-#    url: /talks/    
+- title: "Advised Students"
+  url: /advised-students/
 
 #  - title: "Teaching"
 #    url: /teaching/    
