--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
 - title: "Publications"
   url: /publications/
 
-- title: "Advised Students"
-  url: /advised-students/
+- title: "Collaboration"
+  url: /collaboration/
 
 #  - title: "Teaching"
 #    url: /teaching/    
