--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=HaOQ8AoAAAAJ&hl=en&oi=ao"
-  email            : "as16054@nyu.edu"
+  email            : "alessandro.saviolo@nyu.edu"
   researchgate     : 
   uri              :
   bitbucket        :
