--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,11 @@ main:
 - title: "Research"
   url: /research/
 
+- title: "Publications"
+  url: /publications/
+
 - title: "Collaboration"
   url: /collaboration/
-
-#  - title: "Teaching"
-#    url: /teaching/    
     
-#  - title: "Portfolio"
-#    url: /portfolio/
-        
-#  - title: "Interesting Stuffs"
-#    url: /year-archive/
-    
-#  - title: "CV"
-#    url: /files/cv_guanrui.pdf
+#  - title: "Resume"
+#    url: /files/resume.pdf
