--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Alessandro Saviolo"
   avatar           : "profile_picture.png"
   bio              : "Ph.D. Candidate"
-  location         : "Brooklyn, New York"
+  location         : "New York"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=HaOQ8AoAAAAJ&hl=en&oi=ao"
